COMPLETED THE INTER SERVICE COMMUNICATION AND FEIGN CLIENT ALSO WORKING FINE MADE LOADBALANCER ALSO

--- a/questionservice/src/main/resources/application.properties
+++ b/questionservice/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.datasource.password=root
 #hibernate properties
 spring.jpa.hibernate.ddl-auto=update   
 spring.jpa.show-sql=true
+
+#service registory as a client configuration
+eureka.instace.client.serverUrl.defaultZone=http://localhost:8761/eureka/
