--- a/quizservice/src/main/resources/application.properties
+++ b/quizservice/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=quizservice
 #changing the server port 
-server.port=8081 
+server.port=8081
 
 #configure the database
 spring.datasource.url=jdbc:mysql://localhost:3306/micro_yt
@@ -10,3 +10,6 @@ spring.datasource.password=root
 #hibernate properties
 spring.jpa.hibernate.ddl-auto=update   
 spring.jpa.show-sql=true
+
+#service registory as a client configuration
+eureka.instace.client.serverUrl.defaultZone=http://localhost:8761/eureka/
